--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.0",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
