--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
