--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.6.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
