--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
+    "vue-flash-message": "^0.6.0",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.6.0",
