--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 10000",
-    "start": "SET NODE_ENV=dev && nodemon index.js",
+    "start": "nodemon index.js",
     "debug": "nodemon --inspect=0.0.0.0:9229 index.js"
   },
   "repository": {
