--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.13",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
